backend/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: backendmutosi-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    name: port80
    targetPort: 80
    protocol: TCP
    nodePort: 30619
  selector:
    app: backendmutosi
