backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backendmutosi
  annotations:
    kubernetes.io/ingress.class: nginx
    #alb.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/rewrite-target: /
    # SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/ssl-redirect: "443"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Group settings
    alb.ingress.kubernetes.io/group.name: mutosi-omni

spec:
  tls:
    - hosts:
      - api-omni.mutosi.com
      secretName: mtscert
  rules:
  - host: api-omni.mutosi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backendmutosi-service
            port:
              number: 80
